# libev_example

./: .gitmodules  build.zig
include/: common.h
lib/: CMakeLists.txt  README.md
src/: ev.zig  main.zig  utils.zig
src/bindings/: common.xxhash  common.zig
